--- a/sass/site/compatibility/woocommerce/woocommerce.scss
+++ b/sass/site/compatibility/woocommerce/woocommerce.scss
@@ -3738,12 +3738,6 @@ button.pswp__button--zoom:hover {
 
 	.widget_shopping_cart .woocommerce-mini-cart__buttons {
 		margin-bottom:0;
-		a {
-			display: inline-block;
-			width: calc( 50% - 5px );
-			margin-right: 5px;
-			text-align: center;
-		}
 
 		.checkout.wc-forward {
 			margin-left: 5px;
